--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     body{
     background-color: #86c0e7;
-        background-image: ;
+        background-image: ;d
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: scroll;
