--- a/index.html
+++ b/index.html
@@ -3,29 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>Miquita</title>
+    <link href="style/estilos.css" type="text/css" rel="stylesheet">
 </head>
-<style>
-    h1{
-        font-family: Tahoma;
-    }
+<body class="body">
+<div class="superior">
+    <div>Te amo mucho <3</div>
+    <div><a href="https://www.youtube.com/watch?v=YkVbgpXXR0M" target="_blank">mirá</a></div>
+    <div> mirá tambíen esto <a href="https://photos.app.goo.gl/RTPEp6qTRhhgaKXp7" target="_blank"> click ahre</a></div>
+</div>
 
-    body{
-    background-color: #86c0e7;
-        background-image: ;d
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-attachment: scroll;
-    }
-    p{
-        font-size: 1.4em;
-    }
-
-</style>
-
-<body>
-<h1>Te amo mucho <3</h1>
-<p><a href="https://www.youtube.com/watch?v=YkVbgpXXR0M" target="_blank">mirá</a></p>
-<br>
-<p> mirá tambíen esto <a href="https://photos.app.goo.gl/RTPEp6qTRhhgaKXp7" target="_blank"> click ahre</a></p>
 </body>
 </html>
