--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <title>Miquita</title>
     <link href="style/estilos.css" type="text/css" rel="stylesheet">
+    <script src="function/funciones.js" type="text/javascript"></script>
 </head>
 <body class="body">
+<h1>MICA🤝🏻LEO</h1>
 <div class="superior">
     <div>Te amo mucho <3</div>
-    <div><a href="https://www.youtube.com/watch?v=YkVbgpXXR0M" target="_blank">mirá</a></div>
-    <div> mirá tambíen esto <a href="https://photos.app.goo.gl/RTPEp6qTRhhgaKXp7" target="_blank"> click ahre</a></div>
+    <div class="link"><a href="pagina-1.html">¿Te acordás?</a></div>
+    <div class="link"> mirá tambíen esto <a href="https://photos.app.goo.gl/RTPEp6qTRhhgaKXp7" target="_blank"> click ahre</a></div>
 </div>
 
 </body>
