--- a/pagina-1.html
+++ b/pagina-1.html
@@ -13,7 +13,7 @@
 <div class="superior">
   <div> "Yo sé que eres el amor de mi vida, el destino lo sabía y tú debes saber que te voy a amar toda la vida.
       Te voy a a cuidar por siempre porque eres lo más valioso que tengo en este mundo"</div>
-   <div> <img src="recursos/foto1.png" class="centrar"> </div>
+   <div> <img src="recursos/snap.jpg" class="centrar"onclick="redireccion()"></div>
 </div>
 </body>
 </html>
