--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <title>Miquita</title>
     <link href="style/estilos.css" type="text/css" rel="stylesheet">
-    <script src="function/funciones.js" type="text/javascript"></script>
 </head>
 <body class="body">
 <h1>MICA🤝🏻LEO</h1>
 <div class="superior">
-    <div>Te amo mucho <3</div>
-    <div class="link"><a href="pagina-1.html">¿Te acordás?</a></div>
-    <div class="link"> mirá tambíen esto <a href="https://photos.app.goo.gl/RTPEp6qTRhhgaKXp7" target="_blank"> click ahre</a></div>
+    <div>Te amo</div>
+    <div class="link"><a href="pagina-1.html">Desde acá</a></div>
+    <div class="link"><a href="pagina-2.html"> Hasta...</a></div>
 </div>
-
+<div class="footer">
+    Rotá la pantalla :0!
+</div>
 </body>
 </html>
