--- a/pagina-1.html
+++ b/pagina-1.html
@@ -2,18 +2,19 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>link1</title>
+    <title>Desde</title>
   <link href="style/estilos.css" type="text/css" rel="stylesheet">
+    <script src="function/funciones.js" type="text/javascript"></script>
 </head>
 <body class="body">
 <div class="nav">
-    <a href="index.html">atrás bb :)</a>
+    <a href="index.html"><- Botón de atrás ;)</a>
 </div>
 
 <div class="superior">
-  <div> "Yo sé que eres el amor de mi vida, el destino lo sabía y tú debes saber que te voy a amar toda la vida.
-      Te voy a a cuidar por siempre porque eres lo más valioso que tengo en este mundo"</div>
+  <div> "(...)" antes de este momento, desde ese 12 de agosto de 2018, desde ese "no toques mis rulitos"</div>
    <div> <img src="recursos/snap.jpg" class="centrar"onclick="redireccion()"></div>
+    <div>Tocá la imagen :)</div>
 </div>
 </body>
 </html>
