--- a/pagina-2.html
+++ b/pagina-2.html
@@ -13,7 +13,7 @@
 <div class="superior">
     <div>Hasta siempre, quiero acompañarte toda mi vida, hacer un montón de planes con vos y poder estar a tu lado hasta el último día</div>
     <div><img src="recursos/cumple.jpg" class="centrar" onclick="redireccion1()"></div>
-    <div>Tocá la imagen :)</div>
+    <div>Tocá la imagen otra vez</div>
 </div>
     </body>
 </html>
